--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -1,61 +1,63 @@
 <div class="container">
     <h2>User Settings</h2>
-    <form>
+    <form #form="ngForm">
         <div class="form-group">
             <label for="name">Name</label>
-            <input id="name" name="name" type="text" class="form-control">
+            <input id="name" name="name" type="text" class="form-control" [(ngModel)]="userSettings.name">
         </div>
 
         <div class="form-check form-group">
-            <input class="form-check-input" type="checkbox" name="emailOffers" id="emailOffers">
+            <input class="form-check-input" type="checkbox" name="emailOffers" id="emailOffers" [(ngModel)]="userSettings.emailOffers">
             <label for="emailOffers" class="form-check-label">Email Special Offers</label>
         </div>
 
         <h5>User Interface Style</h5>
         <div class="form-group">
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="lightInterface" value="light" checked>
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="lightInterface" value="light" checked [(ngModel)]="userSettings.interfaceStyle">
                 <label for="lightInterface" class="form-check-label">Light</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="mediumInterface" value="medium">
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="mediumInterface" value="medium" [(ngModel)]="userSettings.interfaceStyle">
                 <label for="mediumInterface" class="form-check-label">Medium</label>
             </div>
             <div class="form-check">
-                <input class="form-check-input" type="radio" name="interfaceStyle" id="darkInterface" value="dark">
+                <input class="form-check-input" type="radio" name="interfaceStyle" id="darkInterface" value="dark" [(ngModel)]="userSettings.interfaceStyle">
                 <label for="darkInterface" class="form-check-label">Dark</label>
             </div>
         </div>
 
         <div class="form-group">
             <label for="subscriptionType">Subscription Type</label>
-            <select id="subscriptionType" class="form-control">
-                <option value="monthly">Monthly</option>
-                <option value="annual">Annual</option>
-                <option value="lifetime">Lifetime</option>
+            <select id="subscriptionType" class="form-control" name="subscriptionType" [(ngModel)]="userSettings.subscriptionType">
+                <option>Monthly</option>
+                <option>Annual</option>
+                <option>Lifetime</option>
             </select>
         </div>
 
         <div class="form-group">
             <label for="notes">Notes</label>
-            <textarea name="notes" id="notes" cols="30" rows="5" class="form-control"></textarea>
+            <textarea name="notes" id="notes" cols="30" rows="5" class="form-control" [(ngModel)]="userSettings.notes"></textarea>
         </div>
 
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" name="password" id="password" class="form-control">
+            <input type="password" name="password" id="password" class="form-control" [(ngModel)]="userSettings.password">
         </div>
 
         <div class="form-group">
             <label for="date">Date</label>
-            <input type="date" name="date" id="date" class="form-control">
+            <input type="date" name="date" id="date" class="form-control" [(ngModel)]="userSettings.date">
         </div>
 
         <div class="form-group">
             <label for="color">Color</label>
-            <input type="color" name="color" id="color" class="form-control">
+            <input type="color" name="color" id="color" class="form-control" [(ngModel)]="userSettings.color">
         </div>
 
         <button class="btn btn-primary">Send</button>
     </form>
 </div>
+
+<h3>{{ form.value | json }}</h3>
