--- a/src/app/user-settings-form/user-settings-form.component.html
+++ b/src/app/user-settings-form/user-settings-form.component.html
@@ -1,9 +1,13 @@
 <div class="container">
     <h2>User Settings</h2>
-    <form #form="ngForm">
+    <form #form="ngForm" (ngSubmit)="onSubmit(form)">
         <div class="form-group">
             <label for="name">Name</label>
-            <input id="name" name="name" type="text" class="form-control" [(ngModel)]="userSettings.name">
+            <input id="name" name="name" type="text" class="form-control" autocomplete="off"
+                    [(ngModel)]="userSettings.name" required #nameField="ngModel"
+                    [class.field-error]="form.submitted && nameField.invalid"
+                    (blur)="onBlur(nameField)">
+            <div [hidden]="!form.submitted || nameField.valid" class="alert alert-danger">Ingrese un nombre</div>
         </div>
 
         <div class="form-check form-group">
@@ -43,7 +47,7 @@
 
         <div class="form-group">
             <label for="password">Password</label>
-            <input type="password" name="password" id="password" class="form-control" [(ngModel)]="userSettings.password">
+            <input type="password" name="password" id="password" class="form-control" autocomplete="off" [(ngModel)]="userSettings.password">
         </div>
 
         <div class="form-group">
